--- a/Question_Answering_Youtube.ipynb
+++ b/Question_Answering_Youtube.ipynb
@@ -62,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pip install chromadb"
+    "#pip install chromadb youtube-transcript-api pytube"
    ]
   },
   {
